# python-modules

./: .gitignore  Example_Notebook.ipynb  README.md  pyproject.toml
module_a/: __main__.py  script_x.py  script_y.py  script_z.py
module_b/: __main__.py  script_x.py
